--- a/src/options/index.html
+++ b/src/options/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="icon128.png" />
+        <link rel="icon" type="image/svg+xml" href="/icon128.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Options</title>
     </head>
